Install web servers using ansible provisioner
 * Changed to new nginx ansible module, updated INSTALL file
 * Start using ansible for web server provisioning in Vagrantfile
 * Define web-playbook for using ansible module and defining site specifics
 * Create tuptysite role that installs site specific information

--- a/haproxy/INSTALL
+++ b/haproxy/INSTALL
@@ -17,6 +17,6 @@ Documentation for this module is at: https://galaxy.ansible.com/list#/roles/912
 
 Neet to install an nginx module with:
 
-  sudo ansible-galaxy install bennojoy.nginx
+  sudo ansible-galaxy install jdauphant.nginx
 
-Documentation for this module is at: https://galaxy.ansible.com/list#/roles/2
+Documentation for this module is at: https://galaxy.ansible.com/list#/roles/466
